--- a/JasperManagerTest/JasperManagerTest.csproj
+++ b/JasperManagerTest/JasperManagerTest.csproj
@@ -59,6 +59,9 @@
       <Name>JasperManager</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Files\Exemplo.jrxml" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
