--- a/JasperManager/JasperManager.csproj
+++ b/JasperManager/JasperManager.csproj
@@ -39,9 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlsLayout.cs" />
+    <Compile Include="InputControlReference.cs" />
     <Compile Include="JasperAuthorization.cs" />
+    <Compile Include="JasperCollection.cs" />
     <Compile Include="JasperConfig.cs" />
     <Compile Include="JasperClient.cs" />
+    <Compile Include="JasperDataSourceReference.cs" />
     <Compile Include="JasperDescriptor.cs" />
     <Compile Include="JasperExecutionRequest.cs" />
     <Compile Include="JasperExt.cs" />
@@ -52,7 +56,11 @@
     <Compile Include="JasperReportResourceAction.cs" />
     <Compile Include="JasperResult.cs" />
     <Compile Include="JasperResultAsync.cs" />
+    <Compile Include="JrxmlFile.cs" />
+    <Compile Include="JrxmlFileReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryReference.cs" />
+    <Compile Include="JasperResource.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
