--- a/JasperManagerTest/JasperManagerTest.csproj
+++ b/JasperManagerTest/JasperManagerTest.csproj
@@ -61,6 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Files\Exemplo.jrxml" />
+    <None Include="ApiTeste.orderedtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
